# bbs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
assets/: web.css
etc/postfix/: salyut-bbs-external-recipients  salyut-bbs-transport
etc/systemd/system/: salyut-bbs-forward-map.service  salyut-bbs-mail.service  salyut-bbs-web.service  salyut-bbsd.service
etc/sysusers.d/: salyut-bbs-forward-map.conf  salyut-bbs-mail.conf
etc/tmpfiles.d/: salyut-bbs.conf
src/: client.rs  db.rs  forward_map.rs  lib.rs  paths.rs  peer.rs  protocol.rs
