[package]
name = "salyut-bbs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Unix-native BBS for pubnix communities"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[profile.release]
lto = "thin"
strip = true

